# programming-puzzles

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/advent_of_code/: README.md  mod.rs  utils.rs
src/advent_of_code/aoc2023/: day01.rs  day02.rs  day04.rs
src/advent_of_code/aoc2023/day01/: README.md
src/advent_of_code/aoc2023/day02/: README.md
src/advent_of_code/aoc2023/day03/: README.md  day03.rs  mod.rs
src/advent_of_code/aoc2023/day04/: README.md  day04.rs
src/advent_of_code/aoc2024/: README.md  day02.rs  day03.rs  day04.rs
src/advent_of_code/aoc2024/day01/: README.md  day01.rs
src/advent_of_code/aoc2024/day02/: README.md  day02.rs  mod.rs
src/advent_of_code/aoc2024/day03/: README.md  day03.rs  mod.rs
src/advent_of_code/aoc2024/day04/: README.md  day04.rs
src/advent_of_code/aoc2024/day05/: README.md  day05.rs
src/advent_of_code/aoc2024/day06/: README.md  day06.rs
src/advent_of_code/aoc2024/day07/: README.md  day07.rs  mod.rs
src/advent_of_code/aoc2024/day08/: README.md  day08.rs
src/advent_of_code/aoc2024/day09/: README.md  day09.rs  mod.rs
src/advent_of_code/aoc2024/day10/: README.md  day10.rs
src/advent_of_code/aoc2024/day11/: README.md  day11.rs  mod.rs
src/advent_of_code/aoc2024/day12/: README.md  day12.rs  mod.rs
src/advent_of_code/aoc2024/day13/: README.md  day13.rs  mod.rs
src/advent_of_code/aoc2024/day14/: README.md  day14.rs  mod.rs
src/advent_of_code/aoc2024/day15/: README.md  mod.rs  (+1 more)
src/project_euler/: README.md
src/rosalind/: README.md  mod.rs  utils.rs
src/utils/cli/: mod.rs  parser.rs
(+48 files in other folders)
