[package]
name = "programming-puzzles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
dirs = "5.0.1"
regex = "1.11.1"
reqwest = { version = "0.11.22", features = ["blocking"] }

[[advent_of_code]]
name = "advent_of_code"
path = "advent-of-code/lib.rs"
